syntax = "proto3";

package great;

service DbService {
  rpc GetUserById (Id) returns (User);
  rpc AddUser (User) returns (IsDone);
}

message Id{
  int32 id = 1;
}

message User{
  optional int32 id = 1;
  optional string login = 2;
  optional string name = 3;
}

message IsDone{
  bool is_done = 1;
}